kubernetes-student/practice-pods/busybox-resource-request.yaml
apiVersion: v1
kind: Pod
metadata:
  name: resource-request
spec:
  containers:
    - name: busybox
      image: busybox:latest
      command: ["sh", "-c", "while true; do sleep 3600; done"]
