kubernetes-student/practice-pods/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
 name: daemon-test
spec:
 selector:
  matchLabels:
   app: daemon-sets
 template:
  metadata:
   labels:
    app: daemon-sets
  spec:
   containers:
   - name: testing
     image: nginx
