kubernetes-student/practice-pods/test_cpu_pressure.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cpu-pressure-test
spec:
  containers:
  - name: busybox
    image: 172.30.47.164:40080/k8s-deploy/busybox:1.36
    command:
      - sleep
      - "3600"
    resources:
      requests:
        cpu: 1
      limits:
        cpu: 1
