kubernetes-student/practice-pods/omri-deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proto-tv-client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proto_tv_client
  template:
    metadata:
      labels:
        app: proto_tv_client
    spec:
      containers:
        - name: proto-tv-client
          image: 696822383789.dkr.ecr.us-east-1.amazonaws.com/manage_proto:proto_tv_client
          workingDir: /proto_tv_client
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: 1
              memory: 2G
            limits:
              cpu: 2
              memory: 2G
---
apiVersion: v1
kind: Service
metadata:
  name: proto-tv-client-service
spec:
  selector:
    app: proto_tv_client
  ports:
    - name: http
      port: 3001
      targetPort: 3001
  type: NodePort
